@@ -1,3 +1,0 @@
-# do not edit this file, it will be overwritten on update
-
-ACTION!="remove", SUBSYSTEM=="drm", SUBSYSTEMS=="pci|usb|platform", IMPORT{builtin}="path_id"
