@@ -1,14 +1,0 @@
-# do not edit this file, it will be overwritten on update
-
-ACTION=="remove", GOTO="net_end"
-SUBSYSTEM!="net", GOTO="net_end"
-
-IMPORT{builtin}="net_id"
-
-SUBSYSTEMS=="usb", IMPORT{builtin}="usb_id", IMPORT{builtin}="hwdb --subsystem=usb"
-SUBSYSTEMS=="usb", GOTO="net_end"
-
-SUBSYSTEMS=="pci", ENV{ID_BUS}="pci", ENV{ID_VENDOR_ID}="$attr{vendor}", ENV{ID_MODEL_ID}="$attr{device}"
-SUBSYSTEMS=="pci", IMPORT{builtin}="hwdb --subsystem=pci"
-
-LABEL="net_end"
