@@ -1,15 +1,0 @@
-# do not edit this file, it will be overwritten on update
-
-SUBSYSTEM!="net", GOTO="net_setup_link_end"
-
-IMPORT{builtin}="path_id"
-
-ACTION=="move", IMPORT{db}="ID_NET_DRIVER"
-
-ACTION!="add", GOTO="net_setup_link_end"
-
-IMPORT{builtin}="net_setup_link"
-
-NAME=="", ENV{ID_NET_NAME}!="", NAME="$env{ID_NET_NAME}"
-
-LABEL="net_setup_link_end"
