@@ -14,6 +14,7 @@ NEW CHANGES:
              (+) move accelerometer rules file to separate module udev;
              (+) move mtd_probe rules file to separate module udev;
              (+) move kmod rules file to separate module udev;
+             (+) move udev rules file to separate module udev;
         * program:
              (+) remove systemd-sysctl program;
              (+) remove systemd-resolved program;
